# dog-detector

./: README.md  pyproject.toml
.github/workflows/: linters.yml  unit-test.yml
app/: main.py
app/src/adapters/: camera.py  telegram_bot.py  yolov8_dog_detector.py
app/src/domain/: dog_detector.py
app/src/services/: detection_service.py
app/tests/adapters/: test_camera.py  test_telegram_bot.py  test_yolov8_dog_detector.py
app/tests/domain/: test_dog_detector.py
app/tests/services/: test_detection_service.py
